# KMeans

./: CMakeLists.txt  KMeans.kdev4  main.cpp
.kdev4/: KMeans.kdev4
data/: class.txt  digits.txt
